   and multiple node forms.
 - Enhance the mentions box in comments to close when it is open and the page is
   scrolled.
 - Fix bug that prevents the mentions dialog from appearing after navigating
   through the app.
 - Fixed elongated avatar images so they are round once again.
 - Added avatar images to mentions in comments.
 - Load gravatars for users who's email has been setup with gravatar.

v3.14 (August 2019)
 - Highlight code snippets.
 - Collapsable sidebar in issues
 - Added Node merging feature
 - All tables can be sorted by column

v3.13 (June 2019)
 - User-provided content takes priority over default local fields.
 - Fix subnodes disappearing when moved
 - Add auto-save JS that uses localStorage on textarea textchange events
 - Better welcome content

v3.12 (April 2019)
 - Using ajax in comments
 - Fixed nodes sidebar header margin
 - Added bold font to improve bold text visibility
 - Fix links display in Textile fields
 - Fix redirection destinations after edit/delete evidence
 - Refactoring cache keys in pages with comments
 - Disable turbolinks cache when displaying flash messages
 - Sort attachments in alphabetical ASCII order
 - Fix methodology checklist edit error

v3.11.1 (February 2019)
 - Fix blockcode vulnerability in Textile formatting

v3.11 (November 2018)
 - Added comments, subscriptions and notifications to notes
 - Added comments, subscriptions and notifications to evidence
 - Fix blockcode characters displaying incorrectly
 - Fix red dot still being displayed on the first visit to the page that
   caused the single unread notification
 - Upgraded some ruby gems (nokogiri, unicorn, ffi, rubyzip)
 - Fix wrong 'There are no comments' message
 - Escape html in comments
 - Track activities when multiple-creating evidence
 - Revert validating email format
 - Fix usage of set_property to use set_service in nexpose plugin
 - Note and evidence comments in export/import in dradis-projects

v3.10 (August 2018)
 - Add comments for issues