@@ -20,6 +20,7 @@ v3.15 (* 2019)
  - Fixed elongated avatar images so they are round once again.
  - Added avatar images to mentions in comments.
  - Load gravatars for users who's email has been setup with gravatar.
+ - Add project_id to notifications
 
 v3.14 (August 2019)
  - Highlight code snippets.
